--- a/index.html
+++ b/index.html
@@ -12,15 +12,34 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <div class="container">
-        <h1>h1. Dibujo Técnico</h1>
-        <h2>h2. Dibujo Técnico</h2>
-        <h3>h3. Dibujo Técnico</h3>
-        <h4>h4. Dibujo Técnico</h4>
-        <h5>h5. Dibujo Técnico</h5>
-        <h6>h6. Dibujo Técnico</h6>
+        <div class="container-fluid">
+            <h1>Dibujo Técnico</h1>
+        </div>
+
+        <div class="container-fluid">
+            <h2>Sesión 01</h2>
+            <article>
+                Presentación de docente, presentación de materia, pregunta exploratoria, cierre.
+            </article>
+        </div>
+        <div class="container-fluid">
+            <h2>Sesión 02</h2>
+            <article>
+                <ul>
+                    <li><a href="https://portableapps.com/">PortableApps</a></li>   
+                    <li>FreeCAD</li>
+                    <li>CristalDiskManager</li>
+                    <li>7zip</li>
+                </ul>
+            </article>
+        </div>
+
+        
       
         <button type="button" class="btn btn-primary">Primary</button>
         <button type="button" class="btn btn-secondary">Secondary</button>
