--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="container-fluid">
+    <div class="container-fluid-dark">
       <h1>Dibujo Técnico</h1>
     </div>
 
@@ -27,9 +27,12 @@
           Presentación de docente, presentación de materia, pregunta exploratoria, cierre.
         </article>
       </div>
-        <div class="container-fluid">
-          <h2>Sesión 02</h2>
+      
+      <div class="container-fluid">
+        <h2>Sesión 02</h2>
+        <h4>Enlaces a descargables:</h4>
           <article>
+            <p>Recuerda que solo debemos descargar los programas de los lugares oficiales para evutar problemas de virus u otros bichos</p>
             <ul>
               <li><a href="https://portableapps.com/">PortableApps</a></li>   
               <li><a href="https://www.freecad.org/">FreeCAD</a></li>
@@ -37,7 +40,7 @@
               <li><a href="https://www.7-zip.org/">7zip</a></li>
             </ul>
           </article>
-          <h4>iniciamos:</h4>
+        <h4>Iniciamos:</h4>
           <article>
             <p>
               En esta sesión descargaremos el software y haremos la instación en nuestra USB.
@@ -50,7 +53,18 @@
             </p>
             <p>
               Sigue las indicaciones de tu docente para una instalación exitosa. 
-            </p>  
+            </p> 
+          <h4>Pantallazos:</h4>
+            <P>Lo primero a descargar es PortableApps </P>
+            <img src="assets/portableApp01.png" alt="portable apps" width="80%">
+            <p>Vamos hacer la instalación como es de costumbre, con el clásico next, next, next, hasta finalizar el proceso.</p>
+            <P>Para probar nuestra USB vamos a instalar CristalDisKMark, dentro de portable apps buscamos, en gestionar apps, obtener más apps, por título, y buscamos CristalDiskMark y la instalamos.</P>
+            <p>En el chat del grupo comparte tu resultado con los datos de la memoria, marca y capacidad y si es tipo 2.0, 3.0, 3.1 o mayor; pregunta a tu docente como hacer una captura de pantalla.</p>
+            <p>Un ejemplo es como este:</p>
+            <img src="assets/SandiskRoja16gb.png" alt="Sandisk 16 GB apps" width="80%">
+            <p>Después de obtener los datos de nuestra memoria USB vamos a descargar el freeCad de la misma manera, desde portable apps, siguiendo el mismo procedimientos que usamos para la instalación de Cristal debes de lograr instalar FreeCad, el resultado debe de ser el siguiente al correr el programa</p>
+            <img src="assets/freecad09.png" alt="FreeCad" width="80%">
+            <p>felicidades ya lograste la instalación del programa, bienvenido al maravilloso mundo de dibujo técnico</p>
           </article>
         </div>
         <div class="card-footer">
