--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <h2>Sesión 03</h2>
           <article>
             <h4>Pr&aacute;ctica:</h4>
-            <h5>Pr&aacute;ctica 005 | Recuadro</h5>
+            <h5>Pr&aacute;ctica 005 | Cuadrado</h5>
             <p>
              En esta pr&aacute;ctica vamos a dibujar un cuadrado de 50mm de lado.
             </p>
@@ -131,10 +131,37 @@
             <p>
               En esta pr&aacute;ctica vamos a dibujar un pent&aacute;gono de 60 mm de radio.
             </p>
+
             <h5>Pr&aacute;ctica 007 | Hex&aacute;gono</h5>
             <p>
-              En esta pr&aacute;ctiva vamos a desarrollar un H&eacute;xagono de inscrito de 70mm de radio. 
+              En esta pr&aacute;ctica vamos a desarrollar un H&eacute;xagono de inscrito de 70mm de radio. 
             </p>
+            <h5>Pr&aacute;ctica 008  | C&iacute;rculo</h5>
+
+              <p>
+                En esa pr&aacute;ctica vamos a desarrollar un c&iacute;rculo 
+              </p>
+              <h4>Tarea:</h4>
+              <h5>Tarea 005 | Cuadrado</h5>
+              <p>
+                Enunciado: Dibuja un cuadrado con centro en la coordenada 0,0 y de lado igual a 30mm
+              </p>
+
+              <h5>Tarea 006 | Pent&aacute;gono</h5>
+              <p>
+                Enunciado: Dibuja un pent&aacute;gono inscrito en un c&iacute;rculo con radio igual a 100 mm
+              </p>
+
+              <h5>Tarea 007 | Hex&aacute;gono</h5>
+              <p>
+                Enunciado: Dibuja Hex&aacute;gono inscrito en un c&iacuterculo; con radio igual a 90 mm 
+              </p>
+
+              <h5>Tarea 008| C&iacute;rculo</h5>
+              <p>
+                Enunciado: Dibuja un c&iacute;rculo con origen en el centro y radio igual a 80 mm
+              </p>
+
           </article>
           
         </div>
