se agregaron enlaces a video

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 
             <h5>Práctica 004 | Rectángulo</h5>
             <p>En esta práctica vamos a dibujar un rectangulo y todas sus variaciones. </p>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/43PVLRu6xAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </article>
           <hr/>
           <article>
@@ -141,6 +143,11 @@
               <p>
                 En esa pr&aacute;ctica vamos a desarrollar un c&iacute;rculo 
               </p>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/tyMI-jnfAS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/rI_gSiZ_q3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <hr/>
               <h4>Tarea:</h4>
               <h5>Tarea 005 | Cuadrado</h5>
               <p>
