Se agregan videos de practica 007 y 008

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tyMI-jnfAS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/rI_gSiZ_q3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/YvqNbNlOJDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/pxVG6kaimTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
               <hr/>
               <h4>Tarea:</h4>
               <h5>Tarea 005 | Cuadrado</h5>
