--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   gtag('config', 'G-BM1QS0GN8P');
 </script>
 <body>
+  
   <div class="container">
     <div class="container-fluid-dark">
       <h1>Dibujo Técnico</h1>
@@ -98,7 +99,10 @@
             <h5>Práctica 004 | Rectángulo</h5>
             <p>En esta práctica vamos a dibujar un rectangulo y todas sus variaciones. </p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/43PVLRu6xAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="ratio ratio-16x9">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/43PVLRu6xAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            
           </article>
           <hr/>
           <article>
@@ -143,14 +147,25 @@
               <p>
                 En esa pr&aacute;ctica vamos a desarrollar un c&iacute;rculo 
               </p>
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tyMI-jnfAS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <br>
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tyMI-jnfAS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/rI_gSiZ_q3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <br>
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/rI_gSiZ_q3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YvqNbNlOJDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <br>
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/YvqNbNlOJDs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/pxVG6kaimTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <div class="ratio ratio-16x9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/pxVG6kaimTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+              <br>
 
               <hr/>
               <h4>Tarea:</h4>
